--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "dibujo colaborativo",
   "main": "server.js",
   "dependencies": {
-    "express": "^4.13.3"
+    "ejs": "^2.3.4",
+    "express": "^4.13.3",
+    "socket.io": "^1.3.7"
   },
   "devDependencies": {},
   "scripts": {
